Simplify signature testing, and update documentation